fix: Переписана история с arrayList на LinkedList